--- a/estilo.css
+++ b/estilo.css
@@ -155,6 +155,7 @@
     display: inline-block;
     font-size: 20px;
     border-radius: 6px;
+    font-family: Verdana,Geneva,sans-serif;
 }
 
 #el08 {
