--- a/estilo.css
+++ b/estilo.css
@@ -1,10 +1,10 @@
 @media only screen and (max-width: 1000px) {
     body {
-        background-color: lightblue;
+        background-color: lightyellow;
         font-size: 160%;
     }
     .td {
-        background-color: lighblue;
+        background-color: lightyellow;
         font-size: 400%;
     }
 
@@ -128,7 +128,6 @@
     padding: 15px 15px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
     font-size: 30px;
     border-radius: 12px;
 }
