--- a/estilo.css
+++ b/estilo.css
@@ -64,7 +64,7 @@
 .botaoExcluir {
     background-color: gray;
     border: none;
-    color: red;
+    color: white;
     padding: 2px 2px;
     text-align: center;
     text-decoration: none;
